[gd_scene load_steps=4 format=3 uid="uid://cqswuo26ntxeh"]

[ext_resource type="Script" path="res://scripts/play_space.gd" id="1_1hu3i"]
[ext_resource type="Texture2D" uid="uid://8cbc3e0yiymm" path="res://src/EnemyBg.png" id="2_okpsc"]
[ext_resource type="Texture2D" uid="uid://byv1fw7hgo6m" path="res://src/PlayerBg.png" id="3_kxmwi"]

[node name="PlaySpace" type="Node2D"]
script = ExtResource("1_1hu3i")

[node name="EndTurn" type="Button" parent="."]
offset_left = 1726.0
offset_top = 505.0
offset_right = 1896.0
offset_bottom = 597.0
text = "Закончить
ход"

[node name="ExitButton" type="Button" parent="."]
offset_left = 1814.0
offset_right = 1919.0
offset_bottom = 65.0
text = "Выход"

[node name="Board" type="GridContainer" parent="."]
custom_minimum_size = Vector2(660, 720)
offset_left = 588.0
offset_top = 200.0
offset_right = 1298.0
offset_bottom = 920.0
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10
columns = 5

[node name="Slot1" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot1"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot2" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot2"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot3" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot3"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot4" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot4"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot5" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot5"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot6" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot6"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot7" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot7"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot8" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot8"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot9" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot9"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot10" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot10"]
texture = ExtResource("2_okpsc")
centered = false

[node name="Slot11" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot11"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot12" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot12"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot13" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot13"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot14" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot14"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot15" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot15"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot16" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot16"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot17" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot17"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot18" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot18"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot19" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot19"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="Slot20" type="MarginContainer" parent="Board"]
custom_minimum_size = Vector2(130, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Sprite2D" type="Sprite2D" parent="Board/Slot20"]
texture = ExtResource("3_kxmwi")
centered = false

[node name="TurnLabel" type="Label" parent="."]
offset_top = 540.0
offset_right = 244.0
offset_bottom = 605.0
theme_override_font_sizes/font_size = 25
text = "Ваш ход"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
